--- a/index.html
+++ b/index.html
@@ -1,116 +1,132 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
-  <title>Chocolate Pizza</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Delicious</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 
 <body>
-  <div>
-    <header>
-      <div class="header">
-        <img src="./img/logo.png">
-        <img src="./img/hr-img.png">
-        <div class='header-text'>
-          <p id="delicious">DELICIOUS</p>
-          <p id="bfb">THE BEST FOOD BLOG ON THE WEB</p>
-        </div>
-      </div>
-      <div class="icons">
-        <img src="./img/hr-img.png">
-        <img src="./img/fb-icon.png">
-        <img
-          src="https://raw.githubusercontent.com/codefellows/seattle-201d96/main/class-10/lab-a/lab-assets/twit-icon.png">
-        <img src='./img/gp-icon.png'>
-        <img src="./img/insta-icon.png">
-        <img src="./img/flic-icon.png">
-        <img src="./img/pint-icon.png">
-        <img src="./img/hr-img.png">
-        <img
-          src="https://raw.githubusercontent.com/codefellows/seattle-201d96/main/class-10/lab-a/lab-assets/rss-icon.png">
-        <img src="./img/mail-icon.png">
-      </div>
-    </header>
-    <div class="border-bottom">
 
-    </div>
-  </div>
+  <header>
+    <section class="header">
+      <img src="./images/logo.png">
+
+      <div>
+        <p id="delicious">Delicious</p>
+        <p id="bfb">THE BEST FOOD BLOG ON THE WEB</p>
+      </div>
+    </section>
+
+    <nav id="icons">
+      <img src="./images/fb-icon.png">
+      <img src="./images/twit-icon.png">
+      <img src='./images/gp-icon.png'>
+      <img src="./images/insta-icon.png">
+      <img src="./images/flic-icon.png">
+      <img src="./images/pint-icon.png">
+      <img src="./images/rss-icon.png">
+      <img src="./images/mail-icon.png">
+    </nav>
+
+  </header>
+
+  <img src="./images/hr-img.png">
+
   <main>
-    <div class="main-content">
-      <div class="second-header">
-        <div id="header2-text">
-          <h1>Chocolate Pizza</h1>
-          <p>POSTED ON 15 DEC 2013 / DESSERTS</p>
-        </div>
-        <div class="iconprint">
-          <img src="./img/print-icon.png">
-          <p>PRINT</p>
-        </div>
+    <section>
+      <div class="chocolatePizza">
+
+
+        <h1>Chocolate Pizza</h1>
+        <p>POSTED ON 15 DEC 2013 / DESSERTS</p>
       </div>
 
-      <img class="chocolate-pizza" src="./img/choco-pizza.png">
-      <div class="text-content">
-        <p>For the fig-swirl: Melt butter over medim heat in a saucepan. Add brown sugar and stir to dissolve. Halve all and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.
-        </p>
-        <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.
-        </p>
-        <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions i.e., let spinand thikcen for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperwware. Freeze for at least two hours before serving.  
-        </p>
+      <div class="iconprint">
+        <img src="./images/print-icon.png">
+        <p>PRINT</p>
       </div>
 
-      <img>
-      <div class="list-items">
-        <div id="text">
-          <ul class="ul-thing">
-            <div>
-              <li><input type="checkbox">1 1/2 cups milk</li>
-              <li><input type="checkbox">1/2 cup mascarpone</li>
-              <li><input type="checkbox">1/2 tsp pink salt</li>
-              <li><input type="checkbox">1lb Black Mission Figs</li>
-              <li><input type="checkbox">1/2 cup brown sugar</li>
-              <li><input type="checkbox">2-4 tbsp water</li>
-            </div>
-            <div>
-              <li><input type="checkbox">1 1/2 cups milk</li>
-              <li style="text-decoration:line-through"><input type="checkbox">1/2 cup mascarpone</li>
-              <li style="text-decoration:line-through"><input type="checkbox">1/2 tsp pink salt</li>
-              <li><input type="checkbox">1lb Black Mission Figs</li>
-              <li><input type="checkbox">1/2 cup brown sugar</li>
-              <li><input type="checkbox">2-4 tbsp water</li>
-            </div>
-          </ul>
-        </div>
+    </section>
 
-        <img src="./img/list-bg.png">
+    <img class="chocolate-pizza" src="./images/choco-pizza.png">
 
-      </div>
-      <div class="space border-bottom">
-
-      </div>
-      <div class="vanessa">
-        <img src="./img/van-pic.png">
-        <div class="text-vanessa">
-          <h2>Vanessa Stevenson</h2>
-          <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
-        </div>
-        <div>
-          <button>SHARE RECIPE</button>
-        </div>
-      </div>
+    <div class="text-content">
+      <p>For the fig-swirl: Melt butter over medim heat in a saucepan. Add brown sugar and stir to dissolve. Halve all
+        and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you
+        have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.
+      </p>
+      <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely
+        dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait
+        until the fig mixture is cooled.
+      </p>
+      <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer
+        instructions i.e., let spinand thikcen for 20 minutes before adding mascarpone, fig jam mixture, and the nuts.
+        continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperwware.
+        Freeze for at least two hours before serving.
+      </p>
     </div>
+
+    <section id="recipe">
+      <img src="./images/list-bg.png">
+      <ul>
+
+
+        <li><input type="checkbox">1 1/2 cups milk</li>
+        <li><input type="checkbox">1/2 cup mascarpone</li>
+        <li><input type="checkbox">1/2 tsp pink salt</li>
+        <li><input type="checkbox">1lb Black Mission Figs</li>
+        <li><input type="checkbox">1/2 cup brown sugar</li>
+        <li><input type="checkbox">2-4 tbsp water</li>
+
+        <li><input type="checkbox">1 1/2 cups milk</li>
+        <li><input type="checkbox">1/3 granulated sugar</li>
+        <li><input type="checkbox">2 egg yolks</li>
+        <li><input type="checkbox">1 lemon, juiced</li>
+        <li><input type="checkbox">2 tbsp butter</li>
+        <li><input type="checkbox">1 cup honey roasted pecans, roughly chopped</li>
+
+      </ul>
+    </section>
+
+    >
+    </div>
+    <img src="./images/hr-img.png">
+    </div>
+
+    <section>
+
+      <img src="./images/van-pic.png">
+      <div class="text-vanessa">
+        <h2>Vanessa Stevenson</h2>
+        <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
+      </div>
+      
+    </section>
+
+
+    <nav>
+      <button>SHARE RECIPE</button>
+    </nav>
+
+
+
   </main>
+
   <hr id="hr-tag">
   <div class="break">
-    <img src="./img/logo.png">
+    <img src="./images/logo.png">
   </div>
+
   <footer>
     <div>
       <p>Delicious &copy; 2013 All Rights Reserved. <br> Proudly published with Ghost.</p>
     </div>
   </footer>
+
 </body>
 
 </html>
-class="printer-icon"
