--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
         Freeze for at least two hours before serving.
       </p>
     </div>
-
     <section id="recipe">
       <img src="./images/list-bg.png">
       <ul>
@@ -91,38 +90,23 @@
 
       </ul>
     </section>
-
-    >
-    </div>
-    <img src="./images/hr-img.png">
-    </div>
-
-    <section>
-
-      <img src="./images/van-pic.png">
-      <div class="text-vanessa">
-        <h2>Vanessa Stevenson</h2>
-        <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
-      </div>
-      
-    </section>
-
-
-    <nav>
-      <button>SHARE RECIPE</button>
-    </nav>
-
-
-
   </main>
-
-  <hr id="hr-tag">
-  <div class="break">
-    <img src="./images/logo.png">
+  <div>
+  <img src="./images/hr-img.png" id="repeat">
   </div>
-
+  <section id="Vanessa">
+    <img src="./images/van-pic.png">
+    <article>
+      <h2>Vanessa Stevenson</h2>
+      <p>Food enthusiast, photography fan. Add a pinch of raw foodism and
+        that's pretty much who I am.</p>
+    </article>
+    <button>SHARE RECIPE</button>
+  </section>
+  
   <footer>
     <div>
+        <img src="./images/logo.png">
       <p>Delicious &copy; 2013 All Rights Reserved. <br> Proudly published with Ghost.</p>
     </div>
   </footer>
